--- a/U.S. Census.ipynb
+++ b/U.S. Census.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -316,6 +323,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert some of the column values "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -440,48 +454,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            State  TotalPop             Hispanic                White  \\\n",
-      "0    Rhode Island   1053661  13.356666666666678%   74.32541666666665%   \n",
-      "1  South Carolina   4777576   5.056684981684991%  62.888736263736185%   \n",
-      "2    South Dakota    843190  3.2396396396396376%   82.50090090090092%   \n",
-      "3       Tennessee   6499615   4.720026972353339%   73.49008766014822%   \n",
-      "4           Texas  26538614   38.04673809068304%  44.687908934379145%   \n",
-      "\n",
-      "                 Black                Native                Asian  \\\n",
-      "0    5.68291666666667%   0.3462500000000001%  3.2474999999999983%   \n",
-      "1   28.75091575091577%   0.2923992673992673%   1.249175824175822%   \n",
-      "2  1.4238738738738752%    9.417567567567566%  1.0193693693693688%   \n",
-      "3  18.283816587997297%  0.22663519892110592%  1.4072825354012126%   \n",
-      "4   11.65004782858236%  0.26114405969007126%  3.6696958102161825%   \n",
-      "\n",
-      "                 Pacific   Income  Male_pop  Female_pop  \n",
-      "0  0.035833333333333335%  59125.0    510388    543273.0  \n",
-      "1  0.046978021978021964%  46297.0   2322409   2455167.0  \n",
-      "2   0.04189189189189189%  51805.0    423477    419713.0  \n",
-      "3   0.04315576534052599%  47328.0   3167756   3331859.0  \n",
-      "4   0.06881576430074614%  55875.0  13171316  13367298.0  \n"
-     ]
-    }
-   ],
    "source": [
-    "# 7 Convert to numeric variables\n",
-    "df.Male_pop = pd.to_numeric(df.Male_pop)\n",
-    "df.Female_pop = pd.to_numeric(df.Female_pop)\n",
-    "\n",
-    "# Make sure to drop the original GenderPop columm\n",
-    "#df = df.drop(['GenderPop'], axis = 1)\n",
-    "\n",
-    "print(df.head())\n",
-    "\n",
-    "\n"
+    "## Visualize "
    ]
   },
   {
@@ -515,7 +491,7 @@
    "source": [
     "# 8 Make a scatter plot\n",
     "\n",
-    "# The instructions are not really clear here. Plotting Income vs Population does not make whole lot of sense\n",
+    "# The instructions from codeacademy are not really clear here. Plotting Income vs Population does not make whole lot of sense\n",
     "\n",
     "# Good to convert the axis for easier readability \n",
     "df['Female_pop'] = df['Female_pop'].div(100).round(1)\n",
@@ -616,6 +592,13 @@
     "# set the labels \n",
     "ax.set_xlabel(\"Female population in hundreds\")\n",
     "ax.set_ylabel(\"Income\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Histograms"
    ]
   },
   {
@@ -1674,6 +1657,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some more visualisations using geopandas "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -1958,9 +1948,22 @@
     "usdata.boundary.plot(ax=ax, color='Black', linewidth=.4)\n",
     "usdata.plot(ax=ax, cmap='Pastel2', figsize=(12, 12))\n",
     "\n",
-    "\n",
-    "# I will continue to show density / ethnicity b"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can continue to use the geopandas package to show coloured maps for density, ethnicity, gender and income. Happy coding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
